--- a/assets/style.css
+++ b/assets/style.css
@@ -8,7 +8,12 @@
     font-family: 'Roboto', sans-serif;
     font-size: 62.5%;
 
-    --sound-select: #02799D;
+    --sound-select-light: #02799D;
+    --sound-select-default: #1414eb;
+    --select-icon: #ffffff;
+
+    --bg-light:#d1d1d4;
+    --bg-default: #000000;
 }
 
 body{
@@ -17,7 +22,7 @@ body{
 
     height: 100vh;
     width: 100vw;
-    background-color: #000000;
+    background-color: var(--bg-default);
 }
 
 main{
@@ -36,7 +41,7 @@ span{
     line-height: 14.8rem;
     text-align: center;
 
-    color: #1414eb;
+    color: var(--sound-select-default);
 }
 
 .crono{
@@ -68,5 +73,23 @@ span{
 }
 
 .play svg path, .stop svg path, .more svg path, .less svg path{
-    fill: #1414eb;
+    fill: var(--sound-select-default);
+}
+
+/* .florest svg path, .rain svg path, .coffeeShop svg path, .bonfire svg path{} */
+
+.light svg path + path{
+    fill: var(--select-icon);
+} 
+
+.light svg path{
+    fill:var(--sound-select-light);
+}
+
+.select svg path + path{
+    fill:var(--select-icon);
+}
+
+.select svg path {
+    fill: var(--sound-select-default);
 }
